Fixes in the device pages and promotion page.

--- a/File Vari/applewatchsport.html
+++ b/File Vari/applewatchsport.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">TV & Smart Living</a></li>
 		  <li class="active">Apple Watch Sport 38 </li>
 		</ol>
