--- a/File Vari/networking.html
+++ b/File Vari/networking.html
@@ -105,7 +105,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li class="active">Modem & Networking </li>
 		</ol>
 	</div>
@@ -185,9 +185,9 @@
 							<div class="thumbnail">
 								<img src="../images/techni.jpg" alt="">
 							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 79,90 €
+							<div class="pricetag"> 79,90 €
 							</div>
-							<div class="pricediscount">	59,00 €</div>
+							<div class="pricediscount">	<br></div>
 							<div class="row">
 								<div class="col three">				
 									<a href="#" class="btn btn-blue disabled">More details</a>			
