--- a/File Vari/samsung-galaxytaba.html
+++ b/File Vari/samsung-galaxytaba.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">Tablets & PCs</a></li>
 		  <li class="active">Samsung Galaxy TAB A 9.7 </li>
 		</ol>
