--- a/File Vari/smartliving.html
+++ b/File Vari/smartliving.html
@@ -105,7 +105,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li class="active">TV & Smart Living </li>
 		</ol>
 	</div>
