--- a/File Vari/tablets.html
+++ b/File Vari/tablets.html
@@ -105,7 +105,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li class="active">Tablets & PCs </li>
 		</ol>
 	</div>
@@ -216,9 +216,9 @@
 							<div class="thumbnail">
 								<img src="../images/acer-iconia-w4.jpg" alt="">
 							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 299,90 €
+							<div class="pricetag"> 299,90 €
 							</div>
-							<div class="pricediscount">	199,90 €</div>
+							<div class="pricediscount">	<br></div>
 							<div class="row">
 								<div class="col three">				
 									<a href="#" class="btn btn-blue disabled">More details</a>			
