--- a/File Vari/appleipadpro.html
+++ b/File Vari/appleipadpro.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">Tablets & PCs </a></li>
 		  <li class="active">Apple iPad Pro 9.7" </li>
 		</ol>
@@ -209,7 +209,7 @@
 	<div class="row">
 		<div class="assistanceservice">
 			<legend> Related Assistance Service </legend>
-			<a href="#"> Technical assistance </a>
+			<a href="#"> Technical support </a>
 		</div>
 	</div>
 </div>
