--- a/File Vari/iphone-se.html
+++ b/File Vari/iphone-se.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">Smartphones & Cellphones </a></li>
 		  <li class="active"> Apple iPhone SE </li>
 		</ol>
