--- a/File Vari/samsung-s7.html
+++ b/File Vari/samsung-s7.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">Smartphones & Cellphones </a></li>
 		  <li class="active">Samsung Galaxy S7 </li>
 		</ol>
