--- a/File Vari/zyxelrepeater-ac750.html
+++ b/File Vari/zyxelrepeater-ac750.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">All Devices</a></li>
 		  <li><a href="#">Modem & Networking</a></li>
 		  <li class="active">ZyXEL Repeater Wi-Fi AC750 </li>
 		</ol>
